[package]
name = "libtw2-world"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
libtw2-common = { path = "../common/" }
libtw2-gamenet = { package = "libtw2-gamenet-teeworlds-0-6", path = "../gamenet/teeworlds-0.6/" }
