[package]
name = "pre-rfc3243-libtw2-gamenet-common"
description = "pre-rfc3243-libtw2-gamenet-common"
version = "0.1.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "libtw2_gamenet_common"

[dependencies]
arrayvec = "0.5.2"
buffer = "0.1.9"
pre-rfc3243-libtw2-common = { version = "0.1", path = "../../common" }
pre-rfc3243-libtw2-packer = { version = "0.1", path = "../../packer/", features = ["uuid"] }
serde = "1.0.23"
serde_derive = "1.0.7"
uuid = { version = "0.8.1", features = ["serde"] }
warn = ">=0.1.1,<0.3.0"
zerocopy = "0.7.32"
