[package]
name = "libtw2-gamenet-common"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
arrayvec = "0.5.2"
buffer = "0.1.9"
libtw2-common = { path = "../../common" }
libtw2-packer = { path = "../../packer/", features = ["uuid"] }
serde = "1.0.23"
serde_derive = "1.0.7"
uuid = { version = "0.8.1", features = ["serde"] }
warn = ">=0.1.1,<0.3.0"
zerocopy = "0.7.32"
